# aube

./: .gitignore  .rules  Cargo.toml  README.md  SECURITY.md  aube.usage.kdl  external-tools.json  mise.toml  release.json  rust-toolchain.toml
.buildkite/: linux-agent.Dockerfile  sfw-shim-template.sh
.cargo/: audit.toml  config.toml
.claude/skills/soak/: SKILL.md
.github/: renovate.json
.github/workflows/: auto-merge-release.yml  bench-pr.yml  bench-refresh.yml  ci.yml  copr-publish.yml  docs.yml  ffi.yml  node-addon.yml  ppa-publish.yml  publish-homebrew.yml  publish-npm.yml  publish-smoke.yml  release-plz.yml  release.yml  zizmor.yml
benchmarks/: bench.sh  fs-compress-size.mjs  fs-compress-size.mts  generate-phase-results.mts  hermetic.bash  results.json  summarize-results-change.mts  throttle-proxy.mts  update-readme.mts  validate-results.mts
benchmarks/registry/: config.yaml
crates/aube/: CHANGELOG.md  Cargo.toml
crates/aube-codes/: CHANGELOG.md
crates/aube-codes/src/: errors.rs  warnings.rs
crates/aube-ffi/: Cargo.toml  README.md  abi-symbols.txt
crates/aube-ffi/include/: aube.h
crates/aube-ffi/npm/: index.d.ts  index.js  package.json  package.mjs  typecheck.ts
crates/aube-ffi/poc/: bun.ts  deno.ts  registry.mjs  run.sh
crates/aube-ffi/src/: lib.rs
crates/aube-linker/: CHANGELOG.md
crates/aube-linker/src/: hoisted.rs  link.rs  materialize.rs  patches.rs  sweep.rs  tests.rs
crates/aube-lockfile/: CHANGELOG.md  Cargo.toml
crates/aube-lockfile/benches/: dep_path_filename.rs  pnpm_lock_parse.rs  pnpm_lock_write.rs
crates/aube-lockfile/src/: drift.rs  graph_hash.rs  io.rs  lib.rs  source.rs
crates/aube-lockfile/src/bun/: write.rs
crates/aube-lockfile/src/npm/: read.rs  tests.rs
crates/aube-lockfile/src/pnpm/: mod.rs  raw.rs  read.rs  subset.rs  tests.rs  write.rs
crates/aube-lockfile/src/yarn/: berry.rs  classic.rs  tests.rs
crates/aube-lockfile/tests/fixtures/: pnpm-git-resolution.yaml  pnpm-kitchen-sink.yaml  pnpm-v5_3-plain.yaml  pnpm-v5_4-plain.yaml  pnpm-v6-toplevel-deps.yaml  pnpm-v6-workspace.yaml  pnpm-v6.yaml  pnpm-v9-exotic.yaml  pnpm-v9-workspace-catalog.yaml
crates/aube-manifest/: CHANGELOG.md
crates/aube-node/: Cargo.toml  README.md
crates/aube-node/npm/: bun-plugin.d.ts  bun-plugin.js  compile-smoke.mjs  index.d.ts  index.js  package.json  package.mjs  typecheck.ts
crates/aube-node/poc/: .gitignore  index.ts  run.sh
crates/aube-node/src/: lib.rs
crates/aube-registry/: CHANGELOG.md  Cargo.toml
crates/aube-registry/src/: client.rs  jsr.rs  lib.rs
crates/aube-registry/src/client/: access.rs  http.rs
crates/aube-resolver/: CHANGELOG.md  Cargo.toml
crates/aube-resolver/benches/: ancestor_chain.rs
crates/aube-resolver/src/: error.rs  lib.rs  local_source.rs  semver_util.rs  tests.rs  trust.rs  types.rs
crates/aube-resolver/src/resolve/: driver.rs  fetch.rs  vulnerable.rs
crates/aube-runtime/: CHANGELOG.md
crates/aube-runtime/src/: error.rs  platform.rs  self_install.rs
crates/aube-scripts/: CHANGELOG.md
crates/aube-scripts/src/: lib.rs  policy.rs
crates/aube-settings/: CHANGELOG.md  Cargo.toml  build.rs  settings.toml
crates/aube-settings/src/: meta.rs  values.rs
crates/aube-settings/tests/: embedder_defaults.rs
crates/aube-store/: CHANGELOG.md  Cargo.toml
crates/aube-store/src/: cas.rs  integrity.rs  lib.rs  tarball.rs
crates/aube-util/: CHANGELOG.md  Cargo.toml
crates/aube-util/src/http/: mod.rs
crates/aube-workspace/: CHANGELOG.md
crates/aube/src/: argv.rs  dep_chain.rs  embed.rs  lib.rs  main.rs  process_guard.rs  runtime.rs  startup.rs  state.rs  tool_shims.rs
crates/aube/src/commands/: access.rs  activate.rs  add_supply_chain.rs  audit.rs  bin.rs  bugs.rs  ci.rs  dedupe.rs  dlx.rs  exec.rs  global.rs  ignored_builds.rs  mod.rs  node.rs  pack.rs  prefix.rs  project_lock.rs  publish.rs  remove.rs  run.rs  runtime.rs  sbom.rs  script_settings.rs  settings_context.rs  sponsors.rs  update.rs
crates/aube/src/commands/add/: filtered.rs  global.rs  manifest.rs  mod.rs  no_save.rs  spec.rs
crates/aube/src/commands/config/: aube_config.rs  get.rs  list.rs  mod.rs
crates/aube/src/commands/deploy/: mod.rs
crates/aube/src/commands/install/: args.rs  control.rs  delta.rs  fetch.rs  gvs.rs  lifecycle.rs  link.rs  lockfile_dir.rs  lockfile_write_overlap.rs  materialize.rs  mod.rs  resolve.rs  settings.rs  startup.rs  summary.rs  workspace.rs
crates/aube/src/progress/: mod.rs
crates/aube/tests/: embed.rs
docs/: .gitignore  .npmrc  aube-lock.yaml  error-codes.data.json  installation.md  package.json  pnpm-users.md  pnpm-workspace.yaml  security.md  taze.config.mts
docs/.vitepress/: config.mts
docs/cli/: access.md  activate.md  add.md  bin.md  bugs.md  commands.json  index.md  install.md  node.md  prefix.md  sbom.md  sponsors.md
docs/cli/access/: get.md  grant.md  list.md  ls.md  revoke.md  set.md
docs/cli/access/get/: status.md
docs/cli/access/list/: collaborators.md  packages.md
docs/embedding/: ffi.md  index.md  node.md  rust.md
docs/package-manager/: configuration.md  node-runtime.md
docs/settings/: index.md
fixtures/import-yarn-patch-tilde/: package.json
mise-tasks/test/: bats
npm/scripts/: publish.mjs
packaging/copr/: build-copr.sh
scripts/soak/: constants.mts  constants.test.mts  dockerignore.test.mts  external-tools.mts  external-tools.test.mts  paths.mts  rack.test.mts  remotes.mts  remotes.test.mts  soak.mts  soak.test.mts  update-deps.mts  update-deps.test.mts
test/: add.bats  allow_builds.bats  config.bats  deploy.bats  exec.bats  git_deps.bats  global_install.bats  import.bats  install.bats  local_deps.bats  lockfile_settings.bats  optional_platform.bats  patch.bats  root_bin.bats  runtime.bats  runtime_download.bats  yaml_only_root.bats
