[package]
name = "aube-lockfile"
description = "Multi-format lockfile reader/writer for Aube (aube-lock, pnpm-lock, package-lock, yarn.lock, bun.lock)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
include = ["src/**/*.rs"]

[dependencies]
aube-codes = { workspace = true }
aube-manifest = { workspace = true }
aube-settings = { workspace = true }
aube-util = { workspace = true }
base64 = { workspace = true }
glob = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
yaml_serde = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
memchr = "2"

[features]
# Exposes the `__bench_parse_*` shims used by the `pnpm_lock_parse`
# bench. Off by default so the bench helpers stay out of the crate's
# public API surface.
bench = []

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "dep_path_filename"
harness = false

[[bench]]
name = "pnpm_lock_parse"
harness = false
required-features = ["bench"]
