[package]
name = "aube-resolver"
description = "Dependency resolver for Aube"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
include = ["src/**/*.rs", "build.rs"]

[dependencies]
aube-codes = { workspace = true }
aube-registry = { workspace = true }
aube-manifest = { workspace = true }
aube-lockfile = { workspace = true }
aube-store = { workspace = true }
aube-util = { workspace = true }
node-semver = { workspace = true }
smallvec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
rkyv = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
pathdiff = "0.2"
thiserror = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = "3"

[features]
# Exposes the `locked_index` module on the public surface for the
# `locked_lookup` bench. Off by default so the resolver's lockfile-reuse
# index stays an implementation detail (`pub(crate)`) rather than part of
# the crate's default public API.
bench = []

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "locked_lookup"
harness = false
required-features = ["bench"]

[[bench]]
name = "ancestor_chain"
harness = false
required-features = ["bench"]

[build-dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
