[package]
name = "aube-util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shared helpers reused across aube crates (semantic hashing, async dedup, atomic filesystem ops, bincode sidecars)."

[dependencies]
aube-codes = { workspace = true }
rustc-hash = { workspace = true }
foldhash = { workspace = true }
blake3 = { workspace = true }
reflink-copy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = "1"
tokio = { workspace = true }
reqwest = { workspace = true }
webpki-root-certs = { workspace = true }
thiserror = { workspace = true }

[features]
# No TLS backend by default so embedders control when reqwest/rustls is
# enabled; aube-registry's default features turn it on for the aube binary.
# rustls is the only supported backend (no OpenSSL / native-tls — see the
# TLS policy in CLAUDE.md).
default = []
rustls = ["reqwest/rustls"]

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
